--- a/index.html
+++ b/index.html
@@ -1,129 +1,88 @@
-
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Free Steam Key Giveaway</title>
     <style>
+      html, body {
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background: url("gift-card-paypal.gif") no-repeat center center fixed;
+        background-size: cover;
+        font-family: Arial, sans-serif;
+        text-align: center;
+        color: white;
+      }
+
+      .content {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+
+      .instruction {
+        font-size: 28px;
+        margin-bottom: 30px;
+        text-shadow: 0px 2px 6px black;
+      }
+
+      .button {
+        padding: 15px 45px;
+        font-size: 32px;
+        cursor: pointer;
+        background: #1b2838;
+        color: #66c0f4;
+        border: 3px solid #66c0f4;
+        border-radius: 6px;
+        transition: 0.2s;
+      }
+
+      .button:hover {
+        background: #66c0f4;
+        color: #1b2838;
+      }
+
       @font-face {
         font-family: 'CallofDuty';
         src: url("Call of Ops Duty II.otf");
       }
     </style>
-  </head>
-<head>
-  <title>Login Page</title>
-  <style>
-    html {
-      background: url("OIP.png") no-repeat center center fixed;
-      background-size: cover;
-    }
 
-    .container {
-      width: 450px;
-      height: 330px;
-      margin: 0 auto;
-      margin-top: 100px;
-      border: none;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-      background: url("PayPal-Logo-Transparent.png") no-repeat center;
-      background-size: contain;
+    <script>
+      function playVideo() {
+        var video = document.createElement('video');
+        video.src = "videoplayback.mp4";
+        video.autoplay = true;
+        video.loop = true;
+        video.controls = false;
+        video.style.width = "100%";
+        video.style.height = "100%";
 
-    }
+        document.body.innerHTML = "";
+        document.body.appendChild(video);
 
+        video.addEventListener("loadedmetadata", () => {
+          if (video.requestFullscreen) video.requestFullscreen();
+        });
 
-    label {
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      width: 74%;
-      padding: 7.5px;
-      border: none;
-      border-radius: 3px;
-      margin-bottom: 50px;
-      position: relative; left: 48px; top: 106px;
-      background-color: #131313;
-      color: white;
-    }
-
-    input[type="submit"] {
-      width: 77%;
-      padding: 5px;
-      border: none;
-      background-color: transparent !important;
-      box-shadow: 0px 2px 10px rgba(6, 6, 9, 90);
-      color: white;
-      cursor: pointer;
-      position: relative; top: 120px; left: 49px;
+        document.addEventListener("fullscreenchange", () => {
+          if (!document.fullscreenElement) {
+            video.pause();
+            location.reload(); // resets page to original state
+          }
+        });
       }
-    }
-  </style>
-  <script>
-    function redirect() {
-      var username = document.getElementById("username").value;
-      var password = document.getElementById("password").value;
+    </script>
+  </head>
 
-      var video = document.createElement('video');
-      video.src = "videoplayback.mp4";
-      video.width = '100%';
-      video.height = '100%';
-      video.autoplay = true;
-      video.loop = true;
-      video.controls = false;
-      video.style.outline = "none";
-      var container = document.getElementsByClassName("container")[0];
-      container.innerHTML = "";
-      container.appendChild(video);
-
-      video.addEventListener('loadedmetadata', function () {
-        if (video.requestFullscreen) {
-          video.requestFullscreen();
-        } else if (video.mozRequestFullScreen) {
-          video.mozRequestFullScreen();
-        } else if (video.webkitRequestFullscreen) {
-          video.webkitRequestFullscreen();
-        } else if (video.msRequestFullscreen) {
-          video.msRequestFullscreen();
-        }
-      });
-      document.addEventListener("fullscreenchange", function () {
-        if (!document.fullscreenElement) {
-          video.pause();
-          container.innerHTML = `<form><input type="text" id="username" name="username"><input type="password" id="password" name="password"><input type="submit" value="Campaign" onclick="redirect()" style="background-color: transparent; color: #ff0301; font-family:'CallofDuty'; font-size: x-large;"></form>`;
-        }
-      });
-    }
-    document.addEventListener("DOMContentLoaded", function () {
-      var passwordInput = document.getElementById("password");
-
-      passwordInput.addEventListener("keyup", function (event) {
-        event.preventDefault();
-        if (event.key === "Enter") {
-          document.getElementById("submit").click();
-        }
-      });
-    });
-
-
-  </script>
-</head>
-
-<body>
-  <div class="container">
-    <form>
-      <input type="text" id="username" name="username">
-      <input type="password" id="password" name="password">
-
-      <input type="submit" value="Claim Your Paypal" onclick="redirect()" style="background-color: transparent; color: #ff0301; font-family:'CallofDuty'; font-size: x-large;">
-      
-
-      
-    </form>
-  </div>
-</body>
-
+  <body>
+    <div class="content">
+      <div class="instruction">
+        ⬇️ Press the Button to Claim Your Free Steam Key ⬇️
+      </div>
+      <button class="button" onclick="playVideo()">Get Free Steam Key</button>
+    </div>
+  </body>
 </html>
 <!--Call of Duty Login Page,By Rickroll.Activision.Nvidia.CMTW®©.Ltd,Verison 0.22.4-->
